# practice_tests

./: pyproject.toml
additional_task/: base_task.py  deadline_task.py  exceptions.py  periodic_task.py  task.py  task_func.py  task_iterator.py
hw_16_1/: main.py
practice_with_exceptions/: main.py
task_for_practice/: cars.py  employee.py  student.py
tests/: conftest.py  test_deadline_task.py  test_exceptions.py  test_periodic_task.py  test_task.py  test_user.py
tracking_traceback/: main.py
try_and_except/: example_task.py  main.py
user_exception_raise/: main.py
